--- a/src/views/artists-list/artists-list.html
+++ b/src/views/artists-list/artists-list.html
@@ -5,6 +5,7 @@
     <li repeat.for="artist of artistsList">
         <a route-href="route: artists; params.bind: {name:artist.name}">
             <h4>${artist.name} </h4>
+            <img src="${artist.image[2]['#text']}">
         </a>
     </li>
     <button click.delegate="loadPrev()" show.bind="hasPrev()"> Prev </button>  
