Add styles to views

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -2,7 +2,7 @@
     <require from="../search-box/search-box"></require>
     <require from="../artists-list/artists-list"></require>
 
-    <div class="container">
+    <div class="mx-auto" style="width: 600px">
           <search-box></search-box>
           <artists-list></artists-list>
     </div>
