--- a/src/views/artist-details/artist-details.html
+++ b/src/views/artist-details/artist-details.html
@@ -6,7 +6,21 @@
       <li repeat.for="album of albums">
         <button click.delegate="$parent.select(album.name)"> ${album.name} </button>
         <div show.bind="album.name === selectedAlbum">
-          Moar album info.
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="media">
+                          <div class="media-left">
+                              <!--<img class="media-object" src="./asd.png" alt="zdjecie">-->
+                          </div>
+                          <div class="media-body">
+                            <h4 class="media-heading">Data</h4>
+                            info.
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
         </div>
       </li>
     </div>
