--- a/src/views/artists-list/artists-list.html
+++ b/src/views/artists-list/artists-list.html
@@ -1,17 +1,28 @@
 <template>
   <requre  from="./loader.css"></requre> 
 
-  <div if.bind="listLoaded">
-    <li repeat.for="artist of artistsList">
-        <a route-href="route: artists; params.bind: {name:artist.name}">
-            <h4>${artist.name} </h4>
-            <img src="${artist.image[2]['#text']}">
-        </a>
-    </li>
-    <button click.delegate="loadPrev()" show.bind="hasPrev()"> Prev </button>  
-    <button click.delegate="loadNext()" show.bind="hasNext()"> Next </button>
+  <div class="container">
+      <div class="row">
+          <div class="col-md-6" if.bind="listLoaded">
+            <li repeat.for="artist of artistsList">
+              <div class="media">
+                <div class="media-left">
+                    <img class="media-object" src="${artist.image[2]['#text']}" alt="...">
+                </div>
+                <div class="media-body">
+                  <a route-href="route: artists; params.bind: {name:artist.name}">
+                    <h4 class="media-heading">${artist.name}</h4>
+                  </a>  
+                </div>
+              </div>
+            </li>  
+            <button click.delegate="loadPrev()" show.bind="hasPrev()"> Prev </button>  
+            <button click.delegate="loadNext()" show.bind="hasNext()"> Next </button>
+          </div>
+          <div class="col-md-6" if.bind="awaitingResults">
+              Loading ...
+          </div>
+      </div>
   </div>
-  <div if.bind="awaitingResults">
-      Loading ...
-  </div>
+  
 </template>  
