--- a/src/views/search-box/search-box.html
+++ b/src/views/search-box/search-box.html
@@ -2,7 +2,7 @@
   <require from="../../bootstrap/css/bootstrap.css"></require>
   <div>
     <div>
-          <input class="form-control input-lg" type="text" placeholder="Search by artist" value.bind="input & updateTrigger: 'keyup'" change.trigger="inputChange()" keyup.trigger="inputKeyup()")>
+          <input class="form-control input-lg" type="text" placeholder="Search by artist" value.bind="input & updateTrigger: 'keyup'" keyup.trigger="inputKeyup()")>
     </div>
   </div> 
 </template>
